--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.9
 aiosignal==1.3.2
+altgraph==0.17.4
 anyio==4.9.0
 arrow==1.3.0
 attrs==25.3.0
@@ -28,6 +29,8 @@ oauthlib==3.2.2
 packaging==25.0
 propcache==0.3.1
 Pygments==2.19.1
+pyinstaller==6.14.0
+pyinstaller-hooks-contrib==2025.4
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
@@ -36,6 +39,7 @@ qrcode==7.4.2
 repath==0.9.0
 requests==2.32.3
 rich==14.0.0
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 text-unidecode==1.3
